[gd_scene load_steps=14 format=2]

[ext_resource path="res://PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ContaSoma.gd" type="Script" id=2]
[ext_resource path="res://imagens/pergaminho.png" type="Texture" id=3]
[ext_resource path="res://imagens/pixelCasinha.png" type="Texture" id=4]

[sub_resource type="Theme" id=2]

[sub_resource type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0.964706, 0.0509804, 0.0509804, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=9]
size = 23
font_data = ExtResource( 1 )

[node name="ContaSoma" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.996078, 0.145098, 0.145098, 0.168627 )

[node name="Pergaminho" type="Sprite" parent="."]
position = Vector2( 518, 304 )
scale = Vector2( 1.60993, 1.60993 )
texture = ExtResource( 3 )

[node name="controls" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.0
margin_top = 88.0
margin_right = -35.0
margin_bottom = 99.0
__meta__ = {
"_edit_group_": true
}

[node name="Resposta1" type="Button" parent="controls"]
margin_right = 82.0
margin_bottom = 16.0
theme = SubResource( 3 )
custom_colors/font_color = Color( 0.964706, 0.0509804, 0.0509804, 1 )
custom_colors/font_color_hover = Color( 0.894118, 0.941176, 0.0784314, 1 )
custom_colors/font_color_pressed = Color( 0.937255, 0.545098, 0.0392157, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )

[node name="controls2" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 43.0
margin_top = 89.0
margin_right = 126.0
margin_bottom = 97.0
__meta__ = {
"_edit_group_": true
}

[node name="Resposta2" type="Button" parent="controls2"]
margin_right = 83.0
margin_bottom = 16.0
theme = SubResource( 3 )
custom_colors/font_color = Color( 0.964706, 0.0509804, 0.0509804, 1 )
custom_colors/font_color_hover = Color( 0.894118, 0.941176, 0.0784314, 1 )
custom_colors/font_color_pressed = Color( 0.937255, 0.545098, 0.0392157, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 622.0
margin_top = 443.0
margin_right = 685.0
margin_bottom = 504.0

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -159.0
margin_top = -123.0
margin_right = 186.0
margin_bottom = -76.0
custom_colors/font_color = Color( 0.913725, 0.0980392, 0.0352941, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "Quanto Ã© 2 + 7?"
align = 1
valign = 1

[node name="PixelCasinha" type="Sprite" parent="."]
position = Vector2( 650, 474 )
scale = Vector2( 0.182099, 0.182099 )
texture = ExtResource( 4 )

[node name="feedback" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = 144.0
margin_right = 12.0
margin_bottom = 173.0
custom_colors/font_color = Color( 0.913725, 0.0980392, 0.0352941, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
align = 1
valign = 1

[connection signal="pressed" from="controls/Resposta1" to="." method="_on_Resposta1_pressed"]
[connection signal="pressed" from="controls2/Resposta2" to="." method="_on_Resposta2_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
